samples/_failures_safe/1761277955_f4841c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_992cf7c3.c: In function ‘main’:
./samples/SAFE/__tmp_992cf7c3.c:142:21: error: expected expression at end of input
  142 |                     memcmp(decompressed.data, input.data, input.size) ==
      |                     ^~~~~~
./samples/SAFE/__tmp_992cf7c3.c:142:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_992cf7c3.c:142:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_992cf7c3.c:142:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_992cf7c3.c:142:21: error: expected declaration or statement at end of input
